@@ -755,6 +755,7 @@ that holds 'number of scanlines' on an actual console).</p>
 <tr><td> _fcycles</td><td> Number of cycles since frame started</td></tr>
 <tr><td> _icycles</td><td> Number of cycles of last instruction</td></tr>
 <tr><td> _scan</td><td> Current scanline count</td></tr>
+<tr><td> _scanend</td><td> Scanline count at end of last frame</td></tr>
 <tr><td> _scycles</td><td> Number of cycles in current scanline</td></tr>
 <tr><td> _vblank</td><td> Whether vertical blank is enabled (1 or 0)</td></tr>
 <tr><td> _vsync</td><td> Whether vertical sync is enabled (1 or 0)</td></tr>
