@@ -234,7 +234,9 @@ TiaMethod getTiaSpecial(char* ch)
 {
   if(BSPF::equalsIgnoreCase(ch, "_scan"))
     return &TIADebug::scanlines;
-  if(BSPF::equalsIgnoreCase(ch, "_scycles"))
+  else if(BSPF::equalsIgnoreCase(ch, "_scanend"))
+    return &TIADebug::scanlinesLastFrame;
+  else if(BSPF::equalsIgnoreCase(ch, "_scycles"))
     return &TIADebug::cyclesThisLine;
   else if(BSPF::equalsIgnoreCase(ch, "_fcount"))
     return &TIADebug::frameCount;
